# CPP-BaseCamp

./: README.md
NTP_sync/src/: main.c  time_pocess.c
Weather/: .clang-tidy  .gitignore  CMakeLists.txt  README.md
Weather/src/headers/: application.hpp  client.hpp  network.hpp  weather_error.hpp
Weather/src/sources/: application.cpp  client.cpp  main.cpp  network.cpp  weather_error.cpp
